炫彩编程助手/Data/DemoMgr/VS/Lib/xcgui.h


//对象类型决定功能
//对象样式决定外观

/// @defgroup groupObjectType 接口句柄类型
/// @ingroup macroDefine
/// @{
/// 炫彩对象类型
enum XC_OBJECT_TYPE  ///<炫彩对象类型
{
	XC_ERROR = -1,   ///<错误类型
	XC_NOTHING = 0,
	XC_WINDOW = 1,    ///<窗口
	XC_MODALWINDOW = 2,    ///<模态窗口
	XC_FRAMEWND = 3,    ///<框架窗口
	XC_FLOATWND = 4,    ///<浮动窗口
	XC_COMBOBOXWINDOW = 11,   //comboBoxWindow_        组合框弹出下拉列表窗口
	XC_POPUPMENUWINDOW = 12,  //popupMenuWindow_       弹出菜单主窗口
	XC_POPUPMENUCHILDWINDOW = 13,   //popupMenuChildWindow_  弹出菜单子窗口
	XC_OBJECT_UI = 19,   ///<...
	XC_WIDGET_UI = 20,
	//元素
	XC_ELE = 21,   ///<基础元素
	XC_ELE_LAYOUT = 53,   ///<布局元素
	XC_BUTTON = 22,   ///<按钮
	XC_RICHEDIT = 23,   ///<富文本编辑框
	XC_COMBOBOX = 24,   ///<下拉组合框元素
	XC_SCROLLBAR = 25,   ///<滚动条元素
	XC_SCROLLVIEW = 26,   ///<滚动视图元素
	XC_LIST = 27,   ///<列表元素
	XC_LISTBOX = 28,   ///<列表框元素
	XC_LISTVIEW = 29,   ///<列表视图,大图标
	XC_TREE = 30,   ///<树元素
	XC_MENUBAR = 31,   ///<菜单条
	XC_SLIDERBAR = 32,   ///<滑动条
	XC_PROGRESSBAR = 33,   ///<进度条
	XC_TOOLBAR = 34,   ///<工具条
	XC_MONTHCAL = 35,   ///<月历元素
	XC_DATETIME = 36,   ///<时间元素
	XC_PROPERTYGRID = 37,   ///<属性网格
	XC_RICHEDIT_COLOR = 38,   ///<颜色选择元素
	XC_RICHEDIT_SET = 39,   ///<...
	XC_TABBAR = 40,   ///<tab条
	XC_TEXTLINK = 41,   ///<文本链接按钮

	XC_PANE = 42,   ///<布局窗格
	XC_PANE_SPLIT = 43,   ///<布局窗格拖动分割条
	XC_MENUBAR_BUTTON = 44,   ///<菜单条上的按钮
							  //	XC_TOOLBAR_BUTTON       =45,   ///<工具条上按钮
							  //	XC_PROPERTYPAGE_LABEL   =46,   ///<属性页标签按钮
							  //	XC_PIER                 =47,   ///<窗格停靠码头
							  //	XC_BUTTON_MENU          =48,   ///<弹出菜单按钮
							  //	XC_VIRTUAL_ELE          =49,   ///<虚拟元素
							  XC_RICHEDIT_FILE = 50,   ///<RichEditFile 文件选择编辑框
							  XC_RICHEDIT_FOLDER = 51,   ///<RichEditFolder  文件夹选择编辑框
							  XC_LIST_HEADER = 52,   ///<列表头元素

							  XC_SHAPE = 61,    ///<形状对象
							  XC_SHAPE_TEXT = 62,    ///<形状对象-文本
							  XC_SHAPE_PICTURE = 63,    ///<形状对象-图片
							  XC_SHAPE_RECT = 64,    ///<形状对象-矩形
							  XC_SHAPE_ELLIPSE = 65,    ///<形状对象-圆
							  XC_SHAPE_LINE = 66,    ///<形状对象-直线
							  XC_SHAPE_GROUPBOX = 67,    ///<形状对象-组框
							  XC_SHAPE_GIF = 68,    ///<形状对象-GIF

													//其他类型
													XC_MENU = 81,   ///<弹出菜单
													XC_IMAGE = 82,         ///<图片
													XC_IMAGE_TEXTURE = XC_IMAGE,   ///<图片纹理,图片源,图片素材
													XC_HDRAW = 83,   ///<绘图操作
													XC_FONT = 84,   ///<炫彩字体
													XC_FLASH = 85,   ///<flash   
													XC_PANE_CELL = 86,   ///<...
													XC_WEB = 87,   ///<...
													XC_IMAGE_FRAME = 88,   ///<图片帧,指定图片的渲染属性

													XC_LAYOUT_OBJECT = 101,   ///<布局对象LayoutObject
													XC_ADAPTER = 102,   ///<...
													XC_ADAPTER_TABLE = 103,   ///<数据适配器AdapterTable
													XC_ADAPTER_TREE = 104,   ///<数据适配器AdapterTree
													XC_ADAPTER_LISTVIEW = 105,   ///<数据适配器AdapterListView
													XC_ADAPTER_MAP = 106,   ///<数据适配器AdapterMap

													XC_BKINFOM = 116, //背景管理器

																	  //无实体对象,只是用来判断布局
																	  XC_LAYOUT_LISTVIEW = 111,
																	  XC_LAYOUT_LIST = 112,
																	  XC_LAYOUT_OBJECT_GROUP = 113,
																	  XC_LAYOUT_OBJECT_ITEM = 114,
																	  XC_LAYOUT_PANEL = 115,

																	  //无实体对象,只是用来判断类型
																	  XC_LIST_ITEM = 121,     //列表项模板 list_item
																	  XC_LISTVIEW_GROUP = 122,
																	  XC_LISTVIEW_ITEM = 123,
																	  //XC_BUTTON_EX,
};

/// @defgroup groupHandle 句柄列表
/// @ingroup macroDefine
/// @{
typedef void*   HXCGUI;       ///<资源句柄
typedef   struct lua_State lua_State;


///@}

/// @defgroup group_monthCal_button_type_    月历元素上的按钮类型
/// @ingroup macroDefine
/// @{
enum monthCal_button_type_
{
	monthCal_button_type_today = 0,  ///< 今天按钮
	monthCal_button_type_last_year,  ///< 上一年
	monthCal_button_type_next_year,  ///< 下一年
	monthCal_button_type_last_month, ///< 上一月
	monthCal_button_type_next_month, ///< 下一月
};

XC_API HELE WINAPI XMonthCal_GetButton(HELE hEle, monthCal_button_type_ nType);

XC_API lua_State* WINAPI XC_InitLua();

XC_API BOOL WINAPI XC_RunLua(const char*  pLuaFile);

XC_API BOOL WINAPI XC_ExitLua();

XC_API int WINAPI XC_UnicodeToAnsi(const wchar_t *pIn, int inLen, char *pOut, int outLen);

XC_API int WINAPI XC_AnsiToUnicode(const char *pIn, int inLen, wchar_t *pOut, int outLen);

XC_API void WINAPI XC_DebugToFileInfo(const char *pInfo);//打印调试信息到文件 xcgui_debug.txt
XC_API BOOL WINAPI XC_IsHELE(HXCGUI hEle); //检查句柄
XC_API BOOL WINAPI XC_IsHWINDOW(HXCGUI hWindow); //检查句柄
XC_API BOOL WINAPI XC_IsShape(HXCGUI hShape); //检查句柄
XC_API BOOL WINAPI XC_IsHXCGUI(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);

XC_API HWINDOW WINAPI XC_hWindowFromHWnd(HWND hWnd);

XC_API BOOL WINAPI XC_SetProperty(HXCGUI hXCGUI, const wchar_t* pName, const wchar_t* pValue);

XC_API const wchar_t* WINAPI XC_GetProperty(HXCGUI hXCGUI, const wchar_t* pName);

XC_API BOOL WINAPI XC_RegisterWindowClassName(const wchar_t* pClassName); //注册窗口类名
XC_API BOOL WINAPI XC_IsSViewExtend(HELE hEle);  //判断元素是否从滚动视图元素扩展的新元素,包含滚动视图元素
XC_API XC_OBJECT_TYPE WINAPI XC_GetObjectType(HXCGUI hXCGUI);

XC_API HXCGUI WINAPI XC_GetObjectByID(HWINDOW hWindow, int nID); //通过ID获取对象句柄
XC_API HXCGUI WINAPI XC_GetObjectByIDName(HWINDOW hWindow, const wchar_t*  pName);

XC_API HXCGUI WINAPI XC_GetObjectByUID(int nUID);

XC_API HXCGUI WINAPI XC_GetObjectByUIDName(const wchar_t*  pName);

XC_API void WINAPI XC_SetPaintFrequency(int nMilliseconds); //设置UI绘制频率
XC_API void WINAPI XC_SetTextRenderingHint(int  nType);   //设置文本渲染质量
XC_API BOOL WINAPI XC_RectInRect(RECT *pRect1, RECT *pRect2);

XC_API void WINAPI XC_CombineRect(RECT *pDest, RECT *pSrc1, RECT *pSrc2);

XC_API void WINAPI XC_ShowLayoutFrame(BOOL bShow);

XC_API void WINAPI XC_EnableDebugFile(BOOL bEnable);

XC_API void WINAPI XC_SetLayoutFrameColor(COLORREF color);

XC_API void WINAPI XC_EnableErrorMessageBox(BOOL bEnabel);

XC_API HXCGUI WINAPI XC_LoadLayout(const wchar_t *pFileName, HXCGUI hParent = NULL);

XC_API HXCGUI WINAPI XC_LoadLayoutFromString(const char *pStringXML, HXCGUI hParent = NULL);

XC_API BOOL WINAPI XC_LoadResource(const wchar_t *pFileName, const wchar_t *pDir = NULL);

XC_API BOOL WINAPI XC_LoadResourceFromString(const char *pStringXML, const wchar_t* pFileName, const wchar_t *pDir = NULL);

XC_API BOOL WINAPI XC_LoadStyle(const wchar_t *pFileName, const wchar_t *pDir = NULL);

XC_API void WINAPI XC_GetTextSize(const wchar_t* pString, int length, HFONTX hFontX, out_ SIZE* pOutSize);

XC_API void WINAPI XC_GetTextShowSize(const wchar_t* pString, int length, HFONTX hFontX, out_ SIZE* pOutSize);

XC_API void WINAPI _XC_SetType(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);

XC_API void WINAPI _XC_AddType(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);

XC_API void WINAPI _XC_BindData(HXCGUI hXCGUI, int data);

XC_API int  WINAPI _XC_GetBindData(HXCGUI hXCGUI);

XC_API void WINAPI _XC_DebugPrintf(int  level, const char *pFormat, ...);

XC_API void WINAPI _XC_DebugPrintfW(int  level, const wchar_t *pFormat, ...);

XC_API void WINAPI xtrace(const char *pFormat, ...);

XC_API void WINAPI xtracew(const wchar_t *pFormat, ...);