炫彩编程助手/Data/DemoMgr/net简化版/Lib/XCGUI.cs


        [DllImport("xcgui.dll", EntryPoint = "XMonthCal_GetButton", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetButton(int hEle, int nType);

    }

    //为了输入方便，直接搞成小写的
    partial class xc
    {
        [DllImport("user32.dll")]
        public static extern int MessageBoxA(int hWnd, string pText, string pTitle, int nType);
 
        [DllImport("xcgui.dll", EntryPoint = "_XC_SetType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void _XC_SetType(int hXCGUI, int nType);

        [DllImport("xcgui.dll", EntryPoint = "_XC_AddType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void _XC_AddType(int hXCGUI, int nType);

        [DllImport("xcgui.dll", EntryPoint = "_XC_BindData", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void _XC_BindData(int hXCGUI, int data);

        [DllImport("xcgui.dll", EntryPoint = "_XC_GetBindData", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int _XC_GetBindData(int hXCGUI);


        [DllImport("xcgui.dll", EntryPoint = "_XC_DebugPrintf", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void _XC_DebugPrintf(int level, string pFormat, int 点点点);

        [DllImport("xcgui.dll", EntryPoint = "_XC_DebugPrintfW", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void _XC_DebugPrintfW(int level, string pFormat, int 点点点);


        [DllImport("xcgui.dll", EntryPoint = "xtrace", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void xtrace(string pFormat, int 点点点);

        [DllImport("xcgui.dll", EntryPoint = "xtracew", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void xtracew(string pFormat, int 点点点);


        [DllImport("xcgui.dll", EntryPoint = "XC_InitLua", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int InitLua();

        [DllImport("xcgui.dll", EntryPoint = "XC_RunLua", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool RunLua(string pLuaFile);

        [DllImport("xcgui.dll", EntryPoint = "XC_ExitLua", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool ExitLua();

        [DllImport("xcgui.dll", EntryPoint = "XC_UnicodeToAnsi", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int UnicodeToAnsi(string pIn, int inLen, string pOut, int outLen);

        [DllImport("xcgui.dll", EntryPoint = "XC_AnsiToUnicode", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int AnsiToUnicode(string pIn, int inLen, string pOut, int outLen);

        [DllImport("xcgui.dll", EntryPoint = "XC_DebugToFileInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void DebugToFileInfo(string pInfo);

        [DllImport("xcgui.dll", EntryPoint = "XC_IsHELE", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsHELE(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XC_IsHWINDOW", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsHWINDOW(int hWindow);

        [DllImport("xcgui.dll", EntryPoint = "XC_IsShape", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsShape(int hShape);

        [DllImport("xcgui.dll", EntryPoint = "XC_IsHXCGUI", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsHXCGUI(int hXCGUI, int nType);

        [DllImport("xcgui.dll", EntryPoint = "XC_hWindowFromHWnd", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int hWindowFromHWnd(int hWnd);

        [DllImport("xcgui.dll", EntryPoint = "XC_SetProperty", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetProperty(int hXCGUI, string pName, string pValue);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetProperty", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern string GetProperty(int hXCGUI, string pName);

        [DllImport("xcgui.dll", EntryPoint = "XC_RegisterWindowClassName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool RegisterWindowClassName(string pClassName);

        [DllImport("xcgui.dll", EntryPoint = "XC_IsSViewExtend", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsSViewExtend(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetObjectType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetObjectType(int hXCGUI);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetObjectByID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetObjectByID(int hWindow, int nID);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetObjectByIDName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetObjectByIDName(int hWindow, string pName);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetObjectByUID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetObjectByUID(int nUID);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetObjectByUIDName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetObjectByUIDName(string pName);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetResIDValue", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetResIDValue(string pName);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetResImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetResImage(string pName);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetResImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetResImageEx(string pFileName, string pName);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetResColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetResColor(string pName);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetResFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetResFont(string pName);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetResBkInfoM", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetResBkInfoM(string pName);

        [DllImport("xcgui.dll", EntryPoint = "XC_SetPaintFrequency", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetPaintFrequency(int nMilliseconds);

        [DllImport("xcgui.dll", EntryPoint = "XC_SetTextRenderingHint", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetTextRenderingHint(int nType);

        [DllImport("xcgui.dll", EntryPoint = "XC_RectInRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool RectInRect(RECT* pRect1, RECT* pRect2);

        [DllImport("xcgui.dll", EntryPoint = "XC_CombineRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void CombineRect(RECT* pDest, RECT* pSrc1, RECT* pSrc2);

        [DllImport("xcgui.dll", EntryPoint = "XC_ShowLayoutFrame", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void ShowLayoutFrame(bool bShow);

        [DllImport("xcgui.dll", EntryPoint = "XC_EnableDebugFile", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableDebugFile(bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XC_SetLayoutFrameColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetLayoutFrameColor(int color);

        [DllImport("xcgui.dll", EntryPoint = "XC_EnableErrorMessageBox", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableErrorMessageBox(bool bEnabel);

        [DllImport("xcgui.dll", EntryPoint = "XC_LoadLayout", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadLayout(string pFileName, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "XC_LoadLayoutFromString", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadLayoutFromString(string pStringXML, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "XC_LoadResource", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool LoadResource(string pFileName, string pDir);

        [DllImport("xcgui.dll", EntryPoint = "XC_LoadResourceFromString", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool LoadResourceFromString(string pStringXML, string pDir);

        [DllImport("xcgui.dll", EntryPoint = "XC_LoadTemplate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadTemplate(int nType, string pFileName);

        [DllImport("xcgui.dll", EntryPoint = "XC_LoadTemplateFromString", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int LoadTemplateFromString(int nType, string pStringXML);

        [DllImport("xcgui.dll", EntryPoint = "XC_TemplateDestroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void TemplateDestroy(int pInfo);

        [DllImport("xcgui.dll", EntryPoint = "XC_LoadStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool LoadStyle(string pFileName, string pDir);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetTextSize", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetTextSize(string pString, int length, int hFontX, SIZE* pOutSize);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetTextShowSize", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetTextShowSize(string pString, int length, int hFontX, SIZE* pOutSize);
